# crypto-alert-bot

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  services.py
handlers/: commands.py
settings/: .secrets  .secrets_example
