[project]
name = "crypto-alert-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Timur M. Omarov", email = "timhdm@ya.ru"},
]
dependencies = ["aiogram>=3.24.0", "aiohttp>=3.13.3", "aiosqlite>=0.22.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
